--- a/project/style.css
+++ b/project/style.css
@@ -12,7 +12,7 @@
 :root {
     --text-color: #f5f5f5;
     --hover-color: #12f7ff;
-    --bg-color: #250821;
+    --bg-color: #000;
     --secon-bg-color: #292e33;
     --big-font: 2.5rem;
     --normal-font: 2rem;
@@ -324,25 +324,13 @@ section {
     height: auto;
 }
 
-.liquid-shape {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    top: 10%;
-}
-
-.liquid-shape:nth-child(2) {
-    filter: blur(50px);
-}
-
 /* About Section css */
 .about {
     display: flex;
     justify-content: center;
     align-items: center;
     grid-gap: 2em;
-    background: var(--secon-bg-color);
+    background: var(--bg-color);
 }
 
 .about .img-about {
@@ -384,7 +372,8 @@ section {
 .info-about1,
 .info-about2,
 .info-about3 {
-    background: var(--bg-color);
+    background: yellow;
+    color: red;
     font-size: .5rem;
     position: absolute;
     padding: 10px;
@@ -616,25 +605,30 @@ section {
 
 
 /* portfolio section css */
-.fillter-buttons {
+.filter-buttons {
     margin: 2rem;
     text-align: center;
 }
 
-.fillter-buttons .button {
+.filter-buttons .button {
     background: none;
     outline: none;
     border: none;
     cursor: pointer;
-    font-size: .85rem;
+    font-size: 0.85rem;
     font-weight: 600;
-    letter-spacing: .4px;
-    margin-left: 1.3rem;
+    letter-spacing: 0.4px;
+    margin: 0 1.3rem;
     color: var(--text-color);
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    transition: color 0.3s, background-color 0.3s;
 }
 
-.fillter-buttons .button:hover {
+.filter-buttons .button:hover {
     color: var(--hover-color);
+    background-color: var(--button-hover-background);
+    /* Thay đổi nền khi hover */
 }
 
 .portfolio-gallery {
